@@ -4,6 +4,7 @@ Jorge Gonzalez <jorge.gonzalez@artica.es>
 Raul Mateos <raulofpandora@gmail.com>
 Ramon Novoa <ramon.novoa@artica.es>
 Evi Vanoost <vanooste@rcbi.rochester.edu>
+Miguel de Dios <miguel.dedios@artica.es
 
 See full list of contributors on:
 
